--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
     "body-parser": "^2.2.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "google-auth-library": "^10.1.0",
     "googleapis": "^150.0.1",
     "mongoose": "^8.16.1",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "node": "^22.17.0",
-    "nodemailer": "^7.0.4"
+    "nodemailer": "^7.0.4",
+    "path": "^0.12.7"
   }
 }
