--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^8.1.5",
     "body-parser": "^2.2.0",
     "cloudinary": "^1.41.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
