--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.12",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
