--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,16 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "google-auth-library": "^10.1.0",
     "googleapis": "^150.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
