--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
